# csduellab

./: .gitignore  LICENSE  main.py  pyproject.toml
src/: Analyzer.py  duel_gradient_booster.json
src/data/: .gitignore  Data_Preperation.ipynb  Duel_Model_Build.ipynb  data_processing.py  files.txt
src/data/.ipynb_checkpoints/: Data_Preperation-checkpoint.ipynb
